fix(lighthouse-test): solve some issues
  - Replace all tenor gifs for img tag with alt description
  - Define css classes for note-info and note-warning
  - Solve some other accessibilities problems about "contrast ratio" and "discernible name"
  - Tried Monokai Pygment theme but it also has "contrast ratio"
    problem. Add a comment for this to-do.

--- a/_posts/2022-06-08-dotfiles.md
+++ b/_posts/2022-06-08-dotfiles.md
@@ -4,6 +4,7 @@ title:  "Hoje eu aprendi: Vale a pena configurar seus dotfiles"
 date:   2022-06-08 16:58:19 -0300
 tags: Hoje-eu-aprendi Config Vim Neovim dotfiles Linux
 image: /assets/images/dotfiles.png
+image_alt: "Dotfiles in code"
 description: >-
   Porque eu (finalmente) configurei meus "dotfiles".
 categories: blog
@@ -36,7 +37,7 @@ como:
 **OBS**: Há inclusive pastas inteiras, com diversos arquivos, para as configurações de um único
 programa. Você pode ver isso na pasta `~/.config`, por exemplo, ou ainda na pasta `~/.mozilla`,
 caso utilize o navegador *Firefox*.
-{: .notice--info}
+{: .note-info }
 
 ## Instalar Linux é legal, mas cansa.
 Depois de 10 anos usando Linux (e a propósito, eu uso *Arch Linux*, pra não deixar o
@@ -74,11 +75,8 @@ Uma **fantástica** lista de vídeos explicando do zero como configurar o *Neovi
 **Cuidado**: Não recomendo utilizar o dotfiles de terceiros, mas fique a vontade para consultar o que
 fiz (e pretendo continuar atualizando), disponível
 [aqui](https://github.com/callmarx/dotfiles){:target="_blank"}.
-{: .notice--warning}
+{: .note-warning }
 
-<div class="tenor-gif-embed" data-postid="16087071" data-share-method="host" data-aspect-ratio="1.78771" data-width="100%">
-  <a href="https://tenor.com/view/mood-heart-beat-wolf-of-wall-street-matthew-mcconaughey-good-one-gif-16087071">Mood Heart Beat GIF</a>from <a href="https://tenor.com/search/mood-gifs"></a>
-</div>
-<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+![Mood Heart Beat - gif](https://c.tenor.com/F6oK3t9M120AAAAd/mood-heart-beat.gif){: .align-center}
 
 Por agora, é isso.
