fix(core): some adjustments
  - Remove "Learn" tag from posts
  - Rename "Hoje-eu-aprendi" tag for "TIL"
  - Replace "invisible/visible" for "hidden/block" in
    _includes/listed-post.html
  - Add netlify.toml setup

--- a/_posts/2022-06-08-dotfiles.md
+++ b/_posts/2022-06-08-dotfiles.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Hoje eu aprendi: Vale a pena configurar seus dotfiles"
 date:   2022-06-08 16:58:19 -0300
-tags: Hoje-eu-aprendi Config Vim Neovim dotfiles Linux
+tags: TIL Config Vim Neovim dotfiles Linux
 image: /assets/images/dotfiles.png
 image_alt: "Dotfiles in code"
 description: >-
