feat(og-image-ratio): test aspect ratio for open graph

--- a/_posts/2022-06-08-dotfiles.md
+++ b/_posts/2022-06-08-dotfiles.md
@@ -3,13 +3,12 @@ layout: post
 title:  "Hoje eu aprendi: Vale a pena configurar seus dotfiles"
 date:   2022-06-08 16:58:19 -0300
 tags: TIL Config Vim Neovim dotfiles Linux
+main_image: /assets/images/dotfiles.png
 image: /assets/images/dotfiles.png
 image_alt: "Dotfiles in code"
 description: >-
   Porque eu (finalmente) configurei meus "dotfiles".
 categories: blog
-header:
-  og_image: assets/images/dotfiles.png
 
 ---
 
