fix(open-graph): can't be svg
  - Open graph image can't be in SVG format.
    Source: https://indieweb.org/The-Open-Graph-protocol#Does_not_support_SVG_images
  - Add "main_image" for Front Matter in posts as a aditional option to render
    image and the "image" option for .webp extension type.

--- a/_posts/2022-06-08-dotfiles.md
+++ b/_posts/2022-06-08-dotfiles.md
@@ -3,7 +3,8 @@ layout: post
 title:  "Hoje eu aprendi: Vale a pena configurar seus dotfiles"
 date:   2022-06-08 16:58:19 -0300
 tags: TIL Config Vim Neovim dotfiles Linux
-image: /assets/svg/dotfiles.svg
+main_image: /assets/svg/dotfiles.svg
+image: /assets/images/dotfiles.webp
 image_alt: "Dotfiles in code"
 description: >-
   Porque eu (finalmente) configurei meus "dotfiles".
