--- a/src/pt-br/_posts/2022-06-08-dotfiles.md
+++ b/src/pt-br/_posts/2022-06-08-dotfiles.md
@@ -2,6 +2,8 @@
 layout: post
 title:  "Hoje eu aprendi: Vale a pena configurar seus dotfiles"
 date:   2022-06-08 16:58:19 -0300
+locale: pt_BR
+lang-ref: til-dotfiles-worth
 tags: TIL Config Vim Neovim dotfiles Linux
 main_image: /assets/svg/dotfiles.svg
 image: /assets/images/dotfiles.webp
